# mipt2024s-3-ishkhanian-d

./: CMakeLists.txt  README.md  pop_graphs.py  push_graphs.py  stack_with_array.hpp  stack_with_list.hpp  status.md  tester.cpp
prj.app/: CMakeLists.txt  stack_profiler.cpp
prj.app/jsonreader/: CMakeLists.txt  README.md  jsonreader.cpp
prj.app/stack_profiler/: readme.md  stack_profiler.cpp
prj.app/string_tester/: CMakeLists.txt  readme.md  string_tester.cpp
prj.app/time_tester/: CMakeLists.txt  readme.md  time_tester.cpp
prj.cw/: CMakeLists.txt  CS_Daniel_Ishkhanian.docx  readme.md
prj.cw/sift3d/: .~lock.45matches.csv#  .~lock.90matches.csv#  .~lock.matches.csv#  CMakeLists.txt  Makefile  affine-generator.cpp  affines.py  bash_nib_translator.py  bash_rotator.py  bash_translator.py  cmake_install.cmake  find_center.py  nib_rotator.py  nib_translator.py  regSift3D  rotation_matchreader.py  rotation_quality.py  rotator.py  rotator_volume.py  translator.py  translator_volume.py  visrot.py
prj.lab/: CMakeLists.txt  Makefile  cmake_install.cmake
prj.lab/movetester/: CMakeLists.txt  movetester.hpp
prj.lab/stackarr/: CMakeLists.txt  Makefile  cmake_install.cmake  stackarr.cpp  stackarr.hpp  stackarr0.cpp
prj.lab/stackarrt/: Makefile  cmake_install.cmake  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  Makefile  cmake_install.cmake  stacklst.cpp  stacklst.hpp  stacklst0.cpp
prj.tst/: CMakeLists.txt  stackarrT_doctest.cpp  stackarr_doctest.cpp  stackarrt_doctest.cpp  stacklstT_doctest.cpp  stacklst_doctest.cpp  stacklstt_doctest.cpp
(+31 files in other folders)
